--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 25px 60px 115px;
+    padding: 50px 25px 70px 115px;
     background-color: #ffffff;
     border-radius: 13px;
     box-shadow: 0px 0px 15px -3px rgb(0 37 46 / 16%);
+  }
+  @media (min-width: 1250px) {
+    .feature-section .box.box:nth-of-type(2) {
+      padding: 65px 25px 75px 115px;
+    }
+    .feature-section .box.box:nth-of-type(3) {
+      padding: 45px 25px 95px 115px;
+    }
   }
   @media (max-width: 991px) {
     .feature-section .box {
